--- a/index.html
+++ b/index.html
@@ -23,6 +23,51 @@
 		
 	</div> <!-- Main Ends -->
 
+	<div class="nav container">
+			<ul>
+				<li>Eyewear</li>
+				<li>Apparel</li>
+				<li>Gadgets</li>
+				<li>Vehicles</li>
+				<li>Classes</li>
+				<li>Contacts</li>
+			</ul>
+	</div>
+	<div class="products">
+		<div class="items container">
+			<div class="item">
+				<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png">
+				<p>Exploding Pen</p>	
+			</div>
+			<div class="item">
+				<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png">
+				<p>Cellular Watch</p>
+			</div>
+			<div class="item">
+				<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png">
+				<p>Thermal Glasses</p>
+			</div>
+		</div>
+		
+	<div class="information container">
+		<div class="info">
+			<div class="box">
+				<span>Location</span>
+			</div>
+			<p>-47.346436, 84.32354</p>
+		</div>
+
+		<div class="info">
+			<div class="box">
+				<span>Hours</span>
+			</div>
+			<p>0800 - 1800</p>
+		</div>
+
+	</div>
+
+
+</div> <!-- Products Ends -->
 
 
 
