--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<li>Contacts</li>
 			</ul>
 	</div>
-	<div class="products">
+	<div class="submain">
 		<div class="items container">
 			<div class="item">
 				<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png">
@@ -49,29 +49,26 @@
 			</div>
 		</div>
 		
-	<div class="information container">
-		<div class="info">
-			<div class="box">
-				<span>Location</span>
+		<div class="information container">
+			<div class="info">
+				<div class="box">
+					<span>Location</span>
+				</div>
+				<p>-47.346436, 84.32354</p>
 			</div>
-			<p>-47.346436, 84.32354</p>
-		</div>
 
-		<div class="info">
-			<div class="box">
-				<span>Hours</span>
+			<div class="info">
+				<div class="box">
+					<span>Hours</span>
+				</div>
+				<p>0800 - 1800</p>
 			</div>
-			<p>0800 - 1800</p>
 		</div>
+	</div> <!--Submain ends -->
 
+	<div class="footer container">
+			<p>Copyright Secret Agent Supply Inc</p>
 	</div>
-
-
-</div> <!-- Products Ends -->
-
-
-
-
 
 
 </body>
