--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<p>Cellular Watch</p>
 			</div>
 			<div class="item">
-				<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png">
+				<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png" id="sunglasses">
 				<p>Thermal Glasses</p>
 			</div>
 		</div>
