--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
 
-	<div class="header container"> 
-		<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/logo.png">
-		<span>SECRET AGENT SUPPLY INC.</span>
+	<div class="header">
+		<div class="container"> 
+			<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/logo.png">
+			<span>SECRET AGENT SUPPLY INC.</span>
+		</div>
 	</div>
 
 	<div class="main">
@@ -19,11 +21,10 @@
 				<h3>SPORT BIKES AND MOTORCYCLE</h3>
 			</div>
 		</div>		
-	</div>
-		
-	</div> <!-- Main Ends -->
+	</div> 
 
-	<div class="nav container">
+	<div class="nav">
+		<div class="container">
 			<ul>
 				<li>Eyewear</li>
 				<li>Apparel</li>
@@ -32,43 +33,51 @@
 				<li>Classes</li>
 				<li>Contacts</li>
 			</ul>
+		</div>
 	</div>
+
 	<div class="submain">
-		<div class="items container">
-			<div class="item">
-				<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png">
-				<p>Exploding Pen</p>	
-			</div>
-			<div class="item">
-				<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png">
-				<p>Cellular Watch</p>
-			</div>
-			<div class="item">
-				<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png" id="sunglasses">
-				<p>Thermal Glasses</p>
+		<div class="container">
+			<div class="items">
+				<div class="item">
+					<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/pen.png">
+					<p>Exploding Pen</p>	
+				</div>
+				<div class="item">
+					<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png">
+					<p>Cellular Watch</p>
+				</div>
+				<div class="item">
+					<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png" id="sunglasses">
+					<p>Thermal Glasses</p>
+				</div>
 			</div>
 		</div>
 		
-		<div class="information container">
-			<div class="info">
-				<div class="box">
-					<span>Location</span>
+		<div class="information">
+			<div class="container">
+				<div class="info">
+					<div class="box">
+						<span>Location</span>
+					</div>
+					<p>-47.346436, 84.32354</p>
 				</div>
-				<p>-47.346436, 84.32354</p>
-			</div>
 
-			<div class="info">
-				<div class="box">
-					<span>Hours</span>
+				<div class="info">
+					<div class="box">
+						<span>Hours</span>
+					</div>
+					<p>0800 - 1800</p>
 				</div>
-				<p>0800 - 1800</p>
 			</div>
-		</div>
-	</div> <!--Submain ends -->
+		</div> <!--Submain ends -->
 
-	<div class="footer container">
+	<div class="footer">
+		<div class="container">
 			<p>Copyright Secret Agent Supply Inc</p>
+		</div>
 	</div>
+
 
 
 </body>
