--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
 	<div class="header">
 		<div class="container"> 
-			<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/logo.png">
-			<span>SECRET AGENT SUPPLY INC.</span>
+			<div class="name">				
+				<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/logo.png">
+				<span>SECRET AGENT SUPPLY INC.</span>
+			</div>
 		</div>
 	</div>
 
