--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 				<li>Contacts</li>
 			</ul>
 		</div>
+
+		<div class="nav-mobile">
+			<ul>
+				<li>Menu</li>
+			</ul>
+		</div>
 	</div>
 
 	<div class="submain">
