--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/watch.png">
 					<p>Cellular Watch</p>
 				</div>
-				<div class="item">
+				<div class="item sunglasses">
 					<img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/secret-agent-supply/resources/images/glasses.png" id="sunglasses">
 					<p>Thermal Glasses</p>
 				</div>
@@ -78,7 +78,8 @@
 					<p>0800 - 1800</p>
 				</div>
 			</div>
-		</div> <!--Submain ends -->
+		</div>
+	</div> <!--Submain ends -->
 
 	<div class="footer">
 		<div class="container">
